--- a/Makefile.include
+++ b/Makefile.include
@@ -58,7 +58,7 @@ REG_SOCKET_SAMPLES_FLAG = 1
 
 #------------------------------------
 # Set flag to 1 to get (a lot of) debug output, 0 otherwise.
-REG_DEBUG_FLAG = 0
+REG_DEBUG_FLAG 	= 1
 
 #------------------------------------
 # Set flag to 1 to get additional debug output, 0 otherwise.
@@ -67,9 +67,10 @@ REG_DEBUG_FULL_FLAG = 0
 #------------------------------------
 # Create a static or shared library?
 LIB_NAME=libReG_Steer.a
+LIB_UTILS_NAME=libReG_Steer_Utils.a
 
 #--------------------------------------------------------------------
 # Don't edit anything below this line
 
 # Pass version information to compile
-REG_STEER_LIB_VERSION = 1.2b
+REG_STEER_LIB_VERSION = 2.0a
