--- a/make/Makefile.LINUX-Pgi
+++ b/make/Makefile.LINUX-Pgi
@@ -72,4 +72,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
 
 
 # Libraries to link example applications against
-STEER_LDFLAGS = -lm -lz -lxml2
+STEER_LDFLAGS = -lm -lz -lxml2  ${REG_SSL_LIBS}
