--- a/make/Makefile.SGI
+++ b/make/Makefile.SGI
@@ -70,4 +70,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
              -L${REG_XML_LIBDIR}${NBIT}
 
 # Libraries to link example applications against
-STEER_LDFLAGS = -lxml2
+STEER_LDFLAGS = -lxml2  ${REG_SSL_LIBS}
