--- a/make/Makefile.SUN4
+++ b/make/Makefile.SUN4
@@ -70,4 +70,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
              -L${REG_XML_LIBDIR}
 
 # Libraries to link example applications against
-STEER_LDFLAGS = -lm -lz -lresolv -lnsl -lsocket -lxml2
+STEER_LDFLAGS = -lm -lz -lresolv -lnsl -lsocket -lxml2  ${REG_SSL_LIBS}
