--- a/make/Makefile.TRU64
+++ b/make/Makefile.TRU64
@@ -70,4 +70,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
              -L${REG_XML_LIBDIR}
 
 # Libraries to link example applications against
-STEER_LDFLAGS = -lxml2 -lm -lz -liconv
+STEER_LDFLAGS = -lxml2 -lm -lz -liconv  ${REG_SSL_LIBS}
