--- a/make/Makefile.LINUX
+++ b/make/Makefile.LINUX
@@ -34,8 +34,8 @@
 NBIT = 32
 
 # Location of C compiler and flags to use
-CC = distcc
-C_FLAGS = -g -Wall
+CC = gcc
+C_FLAGS = -Wall
 LIB_C_FLAGS = ${C_FLAGS} -fPIC -I../include
 
 # Linker flags to use
