--- a/Makefile.include
+++ b/Makefile.include
@@ -1,5 +1,5 @@
 #    Include file to allow user configuration of build process.
-#  (C) Copyright 2002, 2004, University of Manchester, United Kingdom,
+#  (C) Copyright 2006, University of Manchester, United Kingdom,
 #  all rights reserved.
 #
 #  This software is produced by the Supercomputing, Visualization and
