--- a/Makefile.include
+++ b/Makefile.include
@@ -36,7 +36,7 @@
 # if there is not a corresponding Makefile.<ARCH> file in the make
 # directory, feel free to add one. It just means we haven't tested
 # on that platform yet!
-ARCH = LINUX
+ARCH = ALTIX-GCC
 
 # Directory to install executables to (mini_app, mini_steerer etc.)
 LOCAL_BIN_DIR  = ${HOME}/RealityGrid/bin
@@ -45,7 +45,7 @@ LOCAL_BIN_DIR  = ${HOME}/RealityGrid/bin
 # Medium to use for steering communication - you have a choice of
 # files or SOAP over http.
 # Set flag to 1 to use SOAP for steering communication, 0 to use files 
-REG_SOAP_STEERING_FLAG = 1
+REG_SOAP_STEERING_FLAG = 0
 
 #------------------------------------
 # Medium to use for data set transfer - you have a choice of 
@@ -55,7 +55,7 @@ REG_SOAP_STEERING_FLAG = 1
 # REG_DATA_DIRECTORY if set).
 
 # Set flag to 1 to use sockets for iotype samples communication, 0 to not 
-REG_SOCKET_SAMPLES_FLAG = 1
+REG_SOCKET_SAMPLES_FLAG = 0
 
 # Set flag to 1 to use an IOProxy for iotype samples communication, 0 to not
 REG_PROXY_SAMPLES_FLAG = 0
@@ -63,7 +63,7 @@ REG_PROXY_SAMPLES_FLAG = 0
 #------------------------------------
 # Whether or not to build with OpenSSL support.  If no SSL is available
 # then no security (whether WSSE or SSL) is possible.
-REG_WITH_OPENSSL_FLAG = 0
+REG_WITH_OPENSSL_FLAG = 0 
 # Set which SSL libs (normally "-lssl -lcrypto") to link against and
 # the location of OpenSSL libraries if not in a standard place
 REG_SSL_LIBS = 
@@ -88,4 +88,4 @@ LIB_SOAP_NAME=libReG_Steer_SOAP.a
 # Don't edit anything below this line
 
 # Pass version information to compile
-REG_STEER_LIB_VERSION = 2.0.1
+REG_STEER_LIB_VERSION = 2.0
