Major revamp of the build system. Now builds both .a and .so versions of the libraries.
Examples link against the .a versions (using -Wl,-Bstatic) and wrappers build against the .so versions by default.

Removed the now useless set of src/Makefiles.* that were used by the .so build process.

--- a/examples/mini_app_f90_parallel/Makefile
+++ b/examples/mini_app_f90_parallel/Makefile
@@ -39,7 +39,8 @@ TARGET   = mini_app_para
 ${TARGET}: ${TARGET}.o ../../include/reg_steer_f90.inc \
 ${REG_STEER_HOME}/lib$(NBIT)/$(LIB_NAME)
 	-${F90_MPI} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} \
-	${MPI_FLAGS} -lReG_Steer -lReG_Steer_SOAP ${STEER_LDFLAGS}
+	${MPI_FLAGS} -Wl,-Bstatic -lReG_Steer -lReG_Steer_SOAP \
+	-Wl,-Bdynamic ${STEER_LDFLAGS}
 
 mini_app_para.o: mini_app_para.f90
 	-${F90_MPI} ${F90_FLAGS} ${STEER_INCLUDES} -c mini_app_para.f90 -o $@
