Direct TCP Steering connections added.
Functions and associated structures added to provide steering connections via TCP in addition to the already provided SOAP/WSRF- and file-based versions. All expected functionality is provided.

The application to be steered listens for steering connections and the steering client connects to this port. Outgoing port numbers on both sides are selected from those in the range GLOBUS_TCP_SOURCE_RANGE. The listener port is selected from GLOBUS_TCP_PORT_RANGE.

The steering client finds the application to be steered using REG_APP_ADDRESS=machine:port

--- a/Makefile.include
+++ b/Makefile.include
@@ -48,6 +48,18 @@ LOCAL_BIN_DIR  = ${HOME}/RealityGrid/bin
 REG_SOAP_STEERING_FLAG = 0
 
 #------------------------------------
+# Use a direct TCP connection for steering?
+#
+# At the moment this selection method is a MASSIVE hack as it conflicts
+# with REG_SOAP_STEERING_FLAG above. This will be fixed in later releases.
+#
+# The actual implementation is NOT a hack though.
+#
+# This flag overrides REG_SOAP_STEERING_FLAG.
+# Set to 1 for a direct TCP steering connection or 0 to use SOAP or files.
+REG_DIRECT_TCP_STEERING_FLAG = 0
+
+#------------------------------------
 # Medium to use for data set transfer - you have a choice of 
 # direct tcp socket, socket via a proxy or files.  Setting both flags 
 # below to zero means that data transfer will use files (written to 
