Very minor change to the project() declaration in the top-level CMakeLists.txt
Now don't specify C as language so that projects building against this one
don't get lots of CMake warning messages when doing a default build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@
 #  Author.........: Robert Haines
 #----------------------------------------------------------------------
 
-project(REG C)
+project(REG)
 
 # cmake setup boiler-plate
 cmake_minimum_required(VERSION 2.6)
